--- a/render.yaml
+++ b/render.yaml
@@ -7,8 +7,12 @@ services:
     envVars:
       - key: SPRING_PROFILES_ACTIVE
         value: prod
-      - key: DB_URL
-        value: jdbc:postgresql://dpg-d1lnh115pdvs73c6g44g-a.oregon-postgres.render.com:5432/aolangfarm
+      - key: DB_HOST
+        value: dpg-d1lnh115pdvs73c6g44g-a.oregon-postgres.render.com
+      - key: DB_PORT
+        value: 5432
+      - key: DB_NAME
+        value: aolangfarm
       - key: DB_USERNAME
         value: aolangfarm_user
       - key: DB_PASSWORD
