--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -33,9 +33,9 @@ spring:
       enabled: false
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: jdbc:postgresql://dpg-d1lnh115pdvs73c6g44g-a.oregon-postgres.render.com:5432/aolangfarm
+    username: aolangfarm_user
+    password: A9sICwudbDbTH6JIrMlkTorstOrXG0sJ
     hikari:
       poolName: Hikari
       auto-commit: false
